--- a/package.json
+++ b/package.json
@@ -1,29 +1,37 @@
 {
-    "name": "zikje",
-    "version": "0.0.1",
-    "description": "Take the localization of your app to the next level",
-    "main": "dist/index.js",
-    "type": "module",
-    "scripts": {
-        "build": "tsc",
-        "test": "vitest"
-    },
-    "repository": {
-        "type": "git",
-        "url": "TODO"
-    },
-    "keywords": ["localization", "i18n", "internationalization", "typescript"],
-    "author": "Selmir Nedžibi",
-    "license": "ISC",
-    "bugs": {
-        "url": "TODO"
-    },
-    "homepage": "TODO",
-    "devDependencies": {
-        "tslib": "^2.4.1",
-        "typescript": "^4.9.3"
-    },
-    "dependencies": {
-        "vitest": "^1.3.1"
-    }
+  "name": "zykie",
+  "version": "0.0.1",
+  "description": "Take the localization of your app to the next level",
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "test": "vitest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Contraboi/zykie.git"
+  },
+  "keywords": [
+    "localization",
+    "i18n",
+    "internationalization",
+    "typescript"
+  ],
+  "author": "Selmir Nedžibi",
+  "license": "ISC",
+  "homepage": "https://github.com/Contraboi/zykie",
+  "devDependencies": {
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "vitest": "^1.3.1"
+
+  },
+  "types": "./dist/index.d.ts",
+  "directories": {
+    "doc": "docs"
+  },
+  "bugs": {
+    "url": "https://github.com/Contraboi/zykie/issues"
+  }
 }
